#2658 [Fixed] Tooltip: Long words overflow box
word-break set to break-word

--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -25,7 +25,7 @@
   text-shadow: none;
   text-transform: none;
   letter-spacing: normal;
-  word-break: normal;
+  word-break: break-word;
   word-spacing: normal;
   word-wrap: normal;
   white-space: normal;
